# pubchem2metta

./: .gitignore  README.md  create_knowledge_graph.py  metta_writer.py  pyproject.toml
adapters/: Adapter.py  compoud_adapter.py  compound_adapter.py  descriptor_adapter.py  has_component_adapter.py  has_parent_adapter.py  has_same_connectivity_adapter.py  is_isotopologue_of_adapter.py  is_stereoisomer_of_adapter.py
biocypher_metta/: pubchemAdapter.py
config/: biocypher_config.yaml  schema_config.yaml
samples/: pc_compound2descriptor_000001_chunk_2.ttl  pc_compound2descriptor_000001_chunk_2.xml  pc_compound2isotopologue.ttl  pc_compound2parent.ttl  pc_compound2stereoisomer_000001.ttl  pc_compound2stereoisomer_000002.ttl
utils/: rdf_convertor.py
